2008-04-20  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/billard-activity/billard.c: (minigolf_create_item): fixed random
	offset bug in which it was possible to have the ball placed on the
	top line which was triggering the border touch sounds endlessly.

2008-04-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved the windows version so that the administration module
	is available in the demo version.
	Now python activities can be part of the demo version and
	many are there now. There are now 47 activities in the demo
	out of 107, more than twice as before. (commit 3362)

	* src/gcompris/board.c: (gc_board_init), (gc_board_check_file):
	* src/gcompris/gcompris.c: (get_board_to_start), (setup_window),
	(display_activation_dialog), (activation_done):

2008-04-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Persan by Ehsan Nouri
	(commit trunk 3353)

	* configure.in:
	* src/gcompris/config.c:
	* global_win32.mak:
	* po/fa.po:
	* po/ChangeLog:


2008-04-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Updated compilation chain for windows.

	* Makefile.am:
	* src/boards/Makefile.mingw:
	* src/boards/chess.c:
	* src/gcompris/Makefile.mingw:

2008-03-23  Bruno Coudoin,,, <bruno.coudoin@free.fr>

	* src/boards/memory.c: (get_random_token), (create_item): Patch from
	  Karl Ove Hufthammer to display 1 + 2 instead of 1+2 and make the text
	  being white. (commit 3335)

2008-03-15  Bruno coudoin  <bruno.coudoin@free.fr>

	- It is now possible to add activity introduction voices.
	  If provided, it will be played when the activity starts and when
	  it's help is requested.
	  To provide an activity intro, you must put it under:
	  boards/voices/<locale>/activity/<activity name>-intro.ogg

	* src/boards/erase.c: (start_board), (end_board),
	(erase_one_item): moved the audio mode PLAY_AND_INTERRUPT only on
	the last item to avoid an intro voice to be cut.
	* src/gcompris/about.c: (gc_about_start): copyright is 2008 now.