@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<GCompris>
+  <Board
+        name="goal"
+        type="python:doubleclick"
+        section="/computer/mouse"
+        icon="boardicons/doubleclick.svg"
+        difficulty="1"
+        author="Bruno Coudoin (bruno.coudoin@free.fr)"
+        boarddir="">
+        <_title>Score a goal</_title>
+        <_description>Double click on any mouse button to score a goal.</_description>
+        <_prerequisite></_prerequisite>
+        <_goal></_goal>
+        <_manual></_manual>
+        <_credit></_credit>
+  </Board>
+  <Data directory=""/>
+</GCompris>
